<resources>
    <string name="app_name">Skill Drills</string>
    <string name="title_profile">Profile</string>
    <string name="title_history">History</string>
    <string name="title_start">Start</string>
    <string name="title_drills">Drills</string>
    <string name="title_routines">Routines</string>

    <string name="facebook_application_id">697890737493317</string>
    <string name="facebook_login_protocol_scheme">fb697890737493317</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="facebook_sign_in">Sign in with Facebook</string>
    <string name="email_sign_in">Sign in with Email</string>
    <string name="add_drill_name_hint">Add Name</string>
    <string name="add_drill_description_hint">Add Drill Description</string>
    <string name="add_drill_fab_description">Add</string>
    <string name="add_drill_activity_label">Activity:</string>
    <string name="add_drill_category_label">Category:</string>
    <string name="add_drill_type_label">Type:</string>
    <string name="drills_add_drill_fab_description">Add Drill</string>
    <string name="logout">Logout</string>
    <string name="start_empty_session_button">Start Empty Session</string>
    <string name="add_routine_name">Name</string>
    <string name="add_routine_note">Note</string>
    <string name="save_routine_button_description">Save Routine</string>
    <string name="routine_add_drill_button">Add Drill</string>
    <string name="routine_delete_item_title">Delete</string>
    <string name="remove_drill_button_content_description">Remove drill button</string>
    <string name="default_empty_session_title">Empty Session</string>
    <string name="start_my_routines_label">My Routines</string>
    <string name="finish_button_text">Finish</string>
    <string name="session_history_label">Session History</string>
</resources>