<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_start"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/title_start" />
    <item
        android:id="@+id/navigation_drills"
        android:icon="@drawable/ic_baseline_timer_24"
        android:title="@string/title_drills" />
    <item
        android:id="@+id/navigation_routines"
        android:icon="@drawable/ic_baseline_library_books_24"
        android:title="@string/title_routines" />

</menu>