<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.routines.RoutineActivity"
    android:id="@+id/addRoutineContainer">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/routineToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_baseline_close_24"
            app:menu="@menu/routine_top_menu_bar"
            app:title="Create Routine" />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- A RecyclerView can also be used -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/routineName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:hint="@string/add_routine_name"
                android:inputType="text"
                android:textColor="@color/textColor" />

            <EditText
                android:id="@+id/routineNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:hint="@string/add_routine_note"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxLines="4"
                android:textColor="@color/textColor" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/drillsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addDrillButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/routine_add_drill_button" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveRoutineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:backgroundTint="@color/primaryColor"
        app:srcCompat="@drawable/ic_baseline_check_24"
        app:tint="@color/primaryTextColor"
        android:contentDescription="@string/save_routine_button_description" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>