<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/fui_transparent">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:src="@drawable/skilldrills_dark_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/fui_transparent"
            android:contentDescription="@string/app_name" />

        <!--email button-->
        <Button
            android:id="@+id/emailSignInButton"
            android:layout_width="275dp"
            android:layout_height="70dp"
            android:layout_marginTop="75dp"
            android:scaleType="fitXY"
            android:paddingEnd="10dp"
            android:paddingStart="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            android:elevation="2dp"
            android:backgroundTint="@color/primaryColor"
            android:textColor="@android:color/white"
            app:iconTint="@android:color/white"
            android:text="@string/email_sign_in"
            app:icon="@drawable/ic_baseline_email_24"
            app:iconPadding="5dp"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon" />

        <!--google button-->
        <Button
            android:id="@+id/googleSignInButton"
            android:layout_width="275dp"
            android:layout_height="70dp"
            android:scaleType="fitXY"
            android:paddingEnd="10dp"
            android:paddingStart="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailSignInButton"
            android:elevation="2dp"
            android:backgroundTint="@android:color/white"
            android:textColor="@color/primaryColor"
            app:iconTint="@null"
            app:iconTintMode="add"
            android:text="@string/google_sign_in"
            app:icon="@drawable/ic_google_24"
            app:iconPadding="5dp"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon" />

        <!--facebook button-->
<!--        <Button-->
<!--            android:id="@+id/facebookSignInButton"-->
<!--            android:layout_width="275dp"-->
<!--            android:layout_height="70dp"-->
<!--            android:scaleType="fitXY"-->
<!--            android:paddingEnd="10dp"-->
<!--            android:paddingStart="20dp"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/googleSignInButton"-->
<!--            android:elevation="2dp"-->
<!--            android:backgroundTint="@color/facebook"-->
<!--            android:textColor="@android:color/white"-->
<!--            app:iconTint="@null"-->
<!--            app:iconTintMode="add"-->
<!--            android:text="@string/facebook_sign_in"-->
<!--            app:icon="@drawable/ic_facebook_24"-->
<!--            app:iconPadding="5dp"-->
<!--            style="@style/Widget.MaterialComponents.Button.TextButton.Icon" />-->
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>